--- a/infraestructure/service.yml
+++ b/infraestructure/service.yml
@@ -5,9 +5,8 @@ metadata:
 spec:
   selector:
     app: nginx-demo
-  
   ports:
   - protocol: TCP
     port: 80
     targetPort: 80
-  type: LoadBalancer
+  type: ClusterIP
